<resources>
    <string name="app_name">Down</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Your Name</string>
    <string name="prompt_confirm">Confirm Password</string>
    <string name="prompt_avatar">Pick your avatar:</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_name">Your name should be at least 2 letters long so people can recognize you.</string>
    <string name="error_used_email">This email address is already in used, please login</string>
    <string name="error_invalid_password">Password must be at least 8 characters long and contain letters</string>
    <string name="error_login">Invalid login credentials, please try again.</string>
    <string name="error_password_mismatch">The passwords do not match.</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>


    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="title_activity_my_feed">My Feed</string>
    <string name="title_activity_register">Register</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="dummy">Content to be added</string>

    <!-- Strings related to downs -->
    <!-- Notification information -->
    <string name="default_notification_channel_name">Downs</string>
    <string name="default_notification_channel_id_description">This channel manages all notifications pertaining to
    receiving and sending downs</string>
    <string name="default_notification_channel_id">down-channel-id</string>

    <!-- Other -->
    <string name="title_my_feed">My Feed</string>
    <string name="title_down_status">Down Status</string>
    <string name="title_my_schedule">My Down Schedule</string>
    <string name="emptyDowns">No downs yet, make one now!</string>
    <string name="empty_scedule">Your schedule is empty, accept or make a down!</string>
    <string name="is_down">You are down to </string>
    <string name="not_down">You are no longer down to </string>
    <string name="title_add_down">Create a Down</string>
    <string name="prompt_down_title">What are you down to do?</string>
    <string name="prompt_time">When would you like to start?</string>
    <string name="error_long_title">Please keep your down description fewer than 30 characters.</string>
    <string name="error_no_select">You need to invite at least 1 friend to your down.</string>
    <string name="your_status">Your Status</string>
    <string name="delete_down_title">Delete Down</string>
    <string name="delete_down_dialog">Deleting a down will remove it permanently and remove it from your invitee\'s feed.</string>
    <string name="delete_down_confirm">Your down has been deleted.</string>


    <!-- Strings related to friends -->
    <string name="emptyFriends">No friends yet. Add some now!</string>
    <string name="title_fragment_my_friends">My Friends</string>
    <string name="title_activity_add_friend">Add Friends</string>
    <string name="title_fragment_my_groups">My Groups</string>
    <string name="new_friend_search">Search for friends</string>
    <string name="your_friend_search">Search your friends</string>
    <string name="newRequest"></string>
    <string name="title_friend_profile">Friend Profile</string>
    <string name="delete_friend_title">Delete Friend</string>
    <string name="delete_friend_dialog">Are you sure you want to remove this person from your friend list?
        You will need to send them a friend request again.</string>

    <string name="dialog_title">Confirm Sending Friend Request</string>
    <string name="dialog_text">By clicking "yes", you will send a friend request to\u0020</string>
    <string name="confirm_request">You have sent a friend request to\u0020</string>

    <!-- Strings related to groups -->
    <string name="your_group_search">Search your groups</string>
    <string name="title_activity_create_group">Make A Group</string>
    <string name="new_group_title">Group name</string>
    <string name="new_group_search">Search friends to add</string>
    <string name="name_goes_here">Name goes here</string>
    <string name="title_activity_group">Group</string>

    <!-- Strings related to Settings -->
    <string name="account_setting">Account Settings</string>
    <string name="change_name">Change Name</string>
    <string name="new_name">Enter New Name</string>
    <string name="confirm_name">Confirm New Name</string>
    <string name="change_email">Change Email</string>
    <string name="new_email">Enter New Email</string>
    <string name="confirm_email">Confirm New Email</string>
    <string name="change_pw">Change Password</string>
    <string name="old_pw">Enter Current Password</string>
    <string name="new_pw">Enter New Password</string>
    <string name="confirm_pw">Confirm New Password</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="delete_account">Delete Account</string>
    <string name="confirm_update">Settings Updated</string>
    <string name="notification">Notification Settings</string>
    <string name="notif_on_off">Toggle Push Notification</string>
    <string name="notif_options">Notification Options</string>
    <string name="more_setting">More</string>
    <string name="tutorial_setting">Tutorial</string>
    <string name="credit_setting">Credit</string>
    <string name="pivacypolicy">Privacy Policy</string>
    <string name="notif_down">Notify when I am invited to a down</string>
    <string name="notif_request">Notify when I receive a friend request</string>
    <string name="notif_status">Notify when someone updates their status in a down</string>
    <string name="notif_downdeletion">Notify when a friend deletes a down</string>
    <string name="delete_msg">By deleting your down account, you will lose all your stored information such as friends, groups, and downs. To confirm the
        deletion, input your password and click confirm. The app will then exit itself.</string>


    <!-- Strings for tutorials -->
    <string name="tutorial0">Welcome to Down, an app for spontaneous event planning!</string>
    <string name="tutorial1">This is your feed page, it shows you the down events that you have made or are invited to.</string>
    <string name="tutorial2">This is your friends page, it lists all your friends.</string>

    <!-- Misc Strings -->
    <string name="policy_link">https://www.termsfeed.com/privacy-policy/530cdacf8e498b39874d5fea00a13d0c</string>

</resources>
