<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddDownActivity">

    <EditText
        android:id="@+id/down_title"
        android:layout_width="0dp"
        android:layout_height="63dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/app_name"
        android:ems="10"
        android:hint="@string/prompt_down_title"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/timePicker1"
        app:layout_constraintStart_toStartOf="@+id/timePicker1"
        app:layout_constraintTop_toTopOf="parent" />

    <TimePicker
        android:id="@+id/timePicker1"
        android:layout_width="344dp"
        android:layout_height="347dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="16dp"
        android:text="@string/prompt_time"
        app:layout_constraintStart_toStartOf="@+id/down_title"
        app:layout_constraintTop_toBottomOf="@+id/down_title" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_next"
        android:layout_width="wrap_content"
        android:layout_height="142dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_next" />
</android.support.constraint.ConstraintLayout>